--- a/.github/workflows/jira_sync.yml
+++ b/.github/workflows/jira_sync.yml
@@ -2,22 +2,13 @@ name: Jira Sync Automation
 
 on:
   schedule:
-    # 1. Urgency (9 AM - 11 AM IST): Every 5 Minutes
-    # IST = UTC + 5:30
-    # 9:00 AM IST = 03:30 UTC, 11:00 AM IST = 05:30 UTC
-    - cron: '30-59/5 3 * * *'   # 3:30-3:55 UTC
-    - cron: '*/5 4 * * *'       # 4:00-4:55 UTC
-    - cron: '0-30/5 5 * * *'    # 5:00-5:30 UTC
-
-    # 2. Day (11 AM - 12 AM IST): Every 3 Hours
-    # 11 AM, 2 PM, 5 PM, 8 PM, 11 PM IST
-    # = 5:30, 8:30, 11:30, 14:30, 17:30 UTC
+    - cron: '30-59/5 3 * * *'
+    - cron: '*/5 4 * * *'
+    - cron: '0-30/5 5 * * *'
     - cron: '30 5,8,11,14,17 * * *'
-
-    # 3. Night (12 AM - 9 AM IST): Once at 6 AM IST = 0:30 UTC
     - cron: '30 0 * * *'
 
-  workflow_dispatch: # Manual trigger
+  workflow_dispatch:
 
 jobs:
   sync:
@@ -32,7 +23,7 @@ jobs:
           node-version: '20'
 
       - name: Install Dependencies
-        run: npm ci
+        run: npm install
 
       - name: Run Jira Sync
         env:
